methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:4: error: illegal start of simple expression
                    def makepattern() {for (stepper<-1 to 4) {makeV()}; for (stepper<-1 to 7 {forward()})}
                                                                                                         ^PictureMono2:6: error: '(' expected but identifier found.
for (stepper1<-1 to 3) {for stepper2<-1 to 3 {makepattern()}; left(); for stepper3<-1 to 7 {forward()}; right() }
                            ^PictureMono2:6: error: illegal start of simple expression
for (stepper1<-1 to 3) {for stepper2<-1 to 3 {makepattern()}; left(); for stepper3<-1 to 7 {forward()}; right() }
                                                            ^PictureMono2:6: error: '(' expected but identifier found.
for (stepper1<-1 to 3) {for stepper2<-1 to 3 {makepattern()}; left(); for stepper3<-1 to 7 {forward()}; right() }
                                                                          ^PictureMono2:6: error: illegal start of simple expression
for (stepper1<-1 to 3) {for stepper2<-1 to 3 {makepattern()}; left(); for stepper3<-1 to 7 {forward()}; right() }
                                                                                                      ^